# claude-foundry

./: .gitignore  CLAUDE.md  README.md  VERSION  pyproject.toml
agents/: architect-python.md  architect-typescript.md  build-error-resolver-python.md  build-error-resolver-typescript.md  code-reviewer-python.md  code-reviewer-typescript.md  doc-updater.md  e2e-test-python-qt.md  e2e-test-python-web.md  e2e-test-typescript.md  refactor-cleaner-python.md  refactor-cleaner-typescript.md  security-reviewer-python.md  security-reviewer-typescript.md  tdd-guide-python.md  tdd-guide-typescript.md
commands/: copilot-agent.md  copilot-ask.md  copilot-audit.md  copilot-job.md  copilot-list-models.md  copilot-multi.md  copilot-review.md  delegate.md  learn-recall.md  learn.md  megamind-adversarial.md  megamind-creative.md  megamind-deep.md  megamind-financial.md  private-list.md  private-remove.md  prj-delete.md  prj-done.md  prj-list.md  prj-new.md  prj-pause.md  prj-resume.md  recall.md  snapshot-list.md  snapshot-restore.md  snapshot.md  update-codemaps.md  update-foundry-check.md  update-foundry-interactive.md  update-foundry.md  update.md
hooks/: hooks.json
mcp-configs/: mcp-servers.json
rules/: README.md  agents.md  architecture.md  codemaps.md  coding-style.md  git-workflow.md  hooks.md  performance.md  security.md  skills.md  testing.md
skills/: IMPROVEMENT-PROCESS.md  README.md
tests/: __init__.py  conftest.py  test_claude_md.py  test_copilot_mcp_setup.py  test_eval_rubric.py  test_foundry_cache_and_groups.py  test_issues_25_26.py  test_mcp_bridge_timeouts.py  (+6 more)
(+229 files in other folders)
