[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-foundry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
addopts = "-q --cov=tools --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tools", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
